# signal-analysis-ad7124-8

./: CMakeLists.txt  README.md  gui.cpp  gui.h  main.cpp  main_gui.h
ui/: main_gui.ui  ui_main_gui.py
